--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0",
     "webpack-visualizer-plugin": "^0.1.11"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "js-cookie": "^2.1.4"
   }
 }
