--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "js-cookie": "^2.1.4",
-    "qs": "^6.5.0"
+    "qs": "^6.5.0",
+    "timeago.js": "^3.0.2"
   }
 }
