--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workerbook-client",
+  "name": "autoReactApp",
   "version": "0.0.1",
   "description": "",
   "main": "main.js",
@@ -83,6 +83,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "at-js-sdk": "^1.3.4",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
@@ -91,6 +92,8 @@
     "es6-promise": "^4.2.4",
     "es6-set": "^0.1.5",
     "fastclick": "^1.0.6",
+    "iscroll": "^5.2.0",
+    "js-cookie": "^2.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.6",
@@ -100,6 +103,8 @@
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "vconsole": "^3.1.0"
+    "vconsole": "^3.1.0",
+    "why-did-you-update": "^0.1.1",
+    "yarn": "^1.7.0"
   }
 }
