--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "iscroll": "^5.2.0",
     "js-cookie": "^2.2.0",
     "react": "^16.3.2",
+    "react-day-picker": "^7.1.10",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
