--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "es6-promise": "^4.2.4",
     "es6-set": "^0.1.5",
     "fastclick": "^1.0.6",
+    "highcharts": "^6.1.1",
     "iscroll": "^5.2.0",
     "js-cookie": "^2.2.0",
     "react": "^16.3.2",
